--- a/guessColorGame.css
+++ b/guessColorGame.css
@@ -30,6 +30,9 @@ h1 {
     margin: 0;
     text-transform: uppercase;
     padding: 20px 0;
+    transition: background 0.6s;
+    -webkit-transition: background 0.6s;
+    -moz-transition: background 0.6s;
 }
 
 #colorDisplay {
